--- a/wp-content/themes/wptemple/style.css
+++ b/wp-content/themes/wptemple/style.css
@@ -586,6 +586,8 @@ body.single p {
         color: #a385be;
         border: 1px solid #a385be;
         background-color: transparent; }
+    .site-inner main.content .pagination-container div.pagination-previous {
+      margin-right: 5px; }
     .site-inner main.content .pagination-container a {
       display: block;
       padding: 15px 20px;
@@ -623,7 +625,10 @@ body.single p {
 
   li[class^="pagination"] {
     order: 1;
-    -webkit-order: 1; } }
+    -webkit-order: 1; }
+
+  body.single p {
+    text-align: left !important; } }
 .grid-post-title {
   text-align: left; }
 
